--- a/spring-cloud-service-provider/src/main/resources/application.yml
+++ b/spring-cloud-service-provider/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   application:
     name: hello-spring-cloud-service-provider
-  zipkin:
-    base-url: http://192.168.137.101:9411
-  boot:
-    admin:
-      client:
-        url: http://localhost:8084
+#  zipkin:
+#    base-url: http://192.168.137.101:9411
+#  boot:
+#    admin:
+#      client:
+#        url: http://localhost:8084
 
 
 server:
@@ -16,5 +16,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-logging:
-  path: ./logs
+#logging:
+#  path: ./logs
