解决关于springcloud 开启熔断hystrix后无法传递header问题

--- a/spring-cloud-service-consumer-fegin/src/main/resources/application.yml
+++ b/spring-cloud-service-consumer-fegin/src/main/resources/application.yml
@@ -20,9 +20,9 @@ server:
   port: 8765
 
 #开启fegin自带熔断器
-#feign:
-#  hystrix:
-#    enabled: true
+feign:
+  hystrix:
+    enabled: true
 
 eureka:
   client:
