--- a/spring-cloud-service-consumer-fegin/src/main/resources/application.yml
+++ b/spring-cloud-service-consumer-fegin/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
 #      client:
 #        url: http://localhost:8084
 #
-#  zipkin:
-#    base-url: http://192.168.137.101:9411
+  zipkin:
+    base-url: http://192.168.137.101:9411
 
 server:
   port: 8765
