--- a/spring-cloud-eureka/src/main/resources/application.yml
+++ b/spring-cloud-eureka/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: spring-cloud-eureka
+  zipkin:
+    base-url: http://192.168.137.101:9411
 
 server:
   port: 8761
