--- a/spring-cloud-service-consumer-fegin/pom.xml
+++ b/spring-cloud-service-consumer-fegin/pom.xml
@@ -56,6 +56,7 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <!--链路追踪-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
