--- a/spring-cloud-service-provider/src/main/resources/application.yml
+++ b/spring-cloud-service-provider/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   application:
     name: hello-spring-cloud-service-provider
-#  zipkin:
-#    base-url: http://192.168.137.101:9411
+  zipkin:
+    base-url: http://192.168.137.101:9411
 #  boot:
 #    admin:
 #      client:
