服务监控客户端配置

--- a/spring-cloud-eureka/src/main/resources/application.yml
+++ b/spring-cloud-eureka/src/main/resources/application.yml
@@ -3,6 +3,10 @@ spring:
     name: spring-cloud-eureka
   zipkin:
     base-url: http://192.168.137.101:9411
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084
 
 server:
   port: 8761
