--- a/spring-cloud-service-consumer-fegin/src/main/resources/application.yml
+++ b/spring-cloud-service-consumer-fegin/src/main/resources/application.yml
@@ -1,30 +1,37 @@
 spring:
-  application:
-    name: spring-cloud-service-consumer-fegin
-  thymeleaf:
-    cache: false
-    mode: LEGACYHTML5
-    encoding: UTF-8
-    servlet:
-      content-type:
-        text/html
-  boot:
-    admin:
-      client:
-        url: http://localhost:8084
+#  application:
+#    name: spring-cloud-service-consumer-fegin
+#  thymeleaf:
+#    cache: false
+#    mode: LEGACYHTML5
+#    encoding: UTF-8
+#    servlet:
+#      content-type:
+#        text/html
+  cloud:
+    config:
+      uri: http://localhost:8888
+      name: fegin
+      label: master
+      profile: prod
 
-  zipkin:
-    base-url: http://192.168.137.101:9411
-
-server:
-  port: 8765
-
-#开启fegin自带熔断器
-feign:
-  hystrix:
-    enabled: true
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#  boot:
+#    admin:
+#      client:
+#        url: http://localhost:8084
+#
+#  zipkin:
+#    base-url: http://192.168.137.101:9411
+#
+#server:
+#  port: 8765
+#
+##开启fegin自带熔断器
+#feign:
+#  hystrix:
+#    enabled: true
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
